--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    .popupContainer
+    {
+        display: none;
+        left: 0;
+        top: 0;
+        width:100%;
+        height:100%;
+        position: fixed;
+        background: rgb(255, 255, 255);
+        padding-top: 100px;
+    }
+
+    .popupContent {
+
+        background-color: rgba(255, 255, 255, 0);
+        font-size: 3em;
+        height: 140px;
+        width: 80%;
+        margin: auto;
+    }
+  </style>
+  <div id="maincontainer">
+    <button id  ='show' >Show</button>
+  </div>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
