--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         width: 80%;
         margin: auto;
     }
+    .formfield{
+      display: flex;
+      flex-direction: row;
+      
+    }
+     .formfield > * {
+margin: 5px;
+    }
   </style>
   <div id="maincontainer">
     <button id  ='show' >Show</button>
